syntax = "proto3";

package todoList;

import "google/protobuf/Empty.proto";

service TodoListService {
  rpc GetTodoList(google.protobuf.Empty) returns (TodoListResponse);

  rpc GetTodo(GetTodoRequest) returns (Todo);

  rpc AddTodo(AddTodoRequest) returns(Todo);
}

message TodoListResponse {
  repeated Todo todo = 1;
}

message Todo {
  string id = 1;
  string title = 2;
  string detail = 3;
}

message GetTodoRequest{
  string id = 1;
}

message AddTodoRequest {
  string title = 1;
  string detail = 2;
}